Fix arrow alignment

--- a/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
+++ b/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
@@ -19,7 +19,8 @@
                     position: absolute;
                     color: #A3A3A3;
                     font-size: 10px;
-                    top: -10px;
+                    top: -8px;
+                    left: -2px;
                     transform: rotate(180deg);
                 }
             }
